--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background: url("/images/bg.png");
+  background: url("images/bg.png");
   background-size: cover;
   background-position: center;
 }
@@ -322,7 +322,7 @@ nav .fa-solid {
 @media only screen and (max-width: 600px) {
   /* Home section */
   #header {
-    background: url(./images/bg-mobile.png);
+    background: url(images/bg-mobile.png);
     background-size: cover;
     width: 100%;
     height: 100vh;
